Remove unnecessary double click prevention
We added this to the forms that lead to background jobs being queued,
but these forms are earlier steps before the confirmation pages

--- a/app/views/admin/republishing/find_organisation.html.erb
+++ b/app/views/admin/republishing/find_organisation.html.erb
@@ -4,9 +4,7 @@
 
 <div class="govuk-grid-row">
   <section class="govuk-grid-column-two-thirds">
-    <%= form_with(url: admin_republishing_organisation_search_path, method: :post, data: {
-        module: "prevent-multiple-form-submissions",
-      }) do %>
+    <%= form_with(url: admin_republishing_organisation_search_path, method: :post) do %>
 
       <%= render "govuk_publishing_components/components/input", {
           label: {
