Make summary required for Editionable Worldwide Organisation Pages
This makes Editionable Worldwide Organisations consistent with other
editionable content types, by requiring their pages to have a summary.

--- a/app/views/admin/worldwide_organisation_page_translations/edit.html.erb
+++ b/app/views/admin/worldwide_organisation_page_translations/edit.html.erb
@@ -10,7 +10,7 @@
         textarea: {
           label: {
             heading_size: "l",
-            text: "Translated summary",
+            text: "Translated summary (required)",
           },
           name: "page[summary]",
           id: "page_summary",
