--- a/app/views/admin/worldwide_organisation_pages/_form.html.erb
+++ b/app/views/admin/worldwide_organisation_pages/_form.html.erb
@@ -24,7 +24,7 @@
   <%= render "govuk_publishing_components/components/character_count", {
     textarea: {
       label: {
-        text: "Summary",
+        text: "Summary (required)",
         heading_size: "l",
       },
       name: "worldwide_organisation_page[summary]",
