Add preview link on the cabinet ministers ordering page
We did consider using the details component, which we use for
displating shareable preview links on editions etc, but that was
a bit misleading as it suggests a link that can be shared with
folks who don't have signon access. In this case, we're only
offering a shortcut to the draft-origin version of the ministers
index page, so it does require signon access, and the 'preview'
link here is not particularly shareable.

The code for the details component approach, should we choose to
use it in future, is available in
https://github.com/alphagov/whitehall/commit/36275690793e5b832b1f5300df993ee1db617628

--- a/app/views/admin/cabinet_ministers/show.html.erb
+++ b/app/views/admin/cabinet_ministers/show.html.erb
@@ -1,6 +1,28 @@
 <% content_for :page_title, "Cabinet ministers ordering" %>
 <% content_for :title, "Cabinet ministers ordering" %>
 
+<% if reshuffle_in_progress? %>
+  <%= render "govuk_publishing_components/components/heading", {
+    text: "Preview ministers page in reshuffle mode",
+    heading_level: 2,
+    font_size: "m",
+    margin_bottom: 3,
+  } %>
+
+  <p class="govuk-body govuk-!-margin-bottom-9">
+    <%= link_to("Preview on website (opens in new tab)",
+      "#{Plek.external_url_for('draft-origin')}/government/ministers",
+      class: "govuk-link",
+      target: "_blank",
+      data: {
+        module: "gem-track-click",
+        "track-category": "button-clicked",
+        "track-action": "ministers-index-page-button",
+        "track-label": "Preview on website",
+      }, rel: "noopener") %>. Requires Signon access.
+  </p>
+<% end %>
+
 <%= render "govuk_publishing_components/components/tabs", {
   tabs: [
     {
