Fix republish by organisation page title
This should match the name defined in the `RepublishingHelper` for
consistency

--- a/app/views/admin/bulk_republishing/new_documents_by_organisation.html.erb
+++ b/app/views/admin/bulk_republishing/new_documents_by_organisation.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title, "Republish all by organisation" %>
+<% content_for :page_title, "Republish all documents by organisation" %>
 <% content_for :title, "What organisation's documents would you like to republish?" %>
 <% content_for :title_margin_bottom, 6 %>
 
