Improve unique title error message
This change is intended to make it clearer to users that they may not be able to find the document that has a similar slug, and that they should use a different title anyway.

This should reduce the likelihood of users opening support tickets when they are unable to find a document with a similar title.

--- a/app/views/admin/editions/show/_sidebar_notices.html.erb
+++ b/app/views/admin/editions/show/_sidebar_notices.html.erb
@@ -21,7 +21,7 @@
   <% end %>
   <% if show_similar_slugs_warning?(@edition) %>
     <%= render "components/inset_prompt", {
-      description: "This title is already used on GOV.UK. Please create a unique title.",
+      description: "This title has been used before on GOV.UK, although the page may no longer exist. Please use another title.",
       error: true,
     } %>
   <% end %>
