Add `edition_title_link_or_edition_title` method
We're going to reuse this conditional logic/link creation code for the
republish documents by content IDs UI. Since it's quite a specific piece
of logic, I've abstracted it here to keep it consistent between uses

--- a/app/views/admin/republishing/confirm_document.html.erb
+++ b/app/views/admin/republishing/confirm_document.html.erb
@@ -22,7 +22,7 @@
         @document.republishable_editions.map do |edition|
           [
             {
-              text: edition.public_url ? sanitize(link_to(edition.title, edition.public_url, { class: "govuk-link" })) : edition.title,
+              text: edition_title_link_or_edition_title(edition),
             },
             {
               text: edition.state.humanize,
