Add GA4 tracking on page load
Sending data related to the current user and page.
We are sending a page_view event, with custom fields.

In GTM, it seems that the govuk_publishing_components page_view event
fields merge with the custom ones, and only one page_view event is
produced on page_load, which is exactly what we wanted.

Co-authored-by: Kashif Atcha <kashif.atcha@digital.cabinet-office.gov.uk>

--- a/app/views/layouts/design_system.html.erb
+++ b/app/views/layouts/design_system.html.erb
@@ -9,13 +9,16 @@
   <% end %>
 <% end %>
 
+<% sanitized_title = sanitize((yield(:page_title).presence || yield(:title))) %>
+
 <%= render "govuk_publishing_components/components/layout_for_admin",
            product_name: "Whitehall Publisher",
            environment: environment,
-           browser_title: ("Error: " if yield(:error_summary).present?).to_s + sanitize((yield(:page_title).presence || yield(:title))) do %>
+           browser_title: ("Error: " if yield(:error_summary).present?).to_s + sanitized_title do %>
 
   <!-- This element exists to initialise the JS module that configures custom Universal Analytics behaviour -->
   <div data-module="app-analytics"></div>
+  <div data-module="GA4PageViewTracking" data-attributes='<%= track_analytics_data_on_load(sanitized_title) %>'></div>
 
   <%= render "govuk_publishing_components/components/skip_link" %>
 
