Setup up action buttons for GA4 tracking
Use the `ga4-button-setup` module to set up the action buttons in the document summary sidebar for GA4 tracking

--- a/app/components/admin/editions/show/sidebar_actions_component.html.erb
+++ b/app/components/admin/editions/show/sidebar_actions_component.html.erb
@@ -1,4 +1,4 @@
-<div class="app-view-summary__sidebar-actions">
+<div class="app-view-summary__sidebar-actions" data-module="ga4-button-setup">
   <%= render "govuk_publishing_components/components/list", {
     extra_spacing: true,
     items: actions,
