--- a/app/views/admin/corporate_information_pages/index.html.erb
+++ b/app/views/admin/corporate_information_pages/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
-    href: @organisation.is_a?(Organisation) ? admin_organisations_path : admin_worldwide_organisations_path,
+    href: admin_organisations_path,
   } %>
 <% end %>
 <% content_for :page_title, @organisation.name %>
