--- a/app/views/admin/governments/_form.html.erb
+++ b/app/views/admin/governments/_form.html.erb
@@ -76,7 +76,7 @@
           },
           day: {
             id: "government_end_date_3i",
-            value: params.dig("government", "end_date(3i)") || government.end_date&.month,
+            value: params.dig("government", "end_date(3i)") || government.end_date&.day,
             name: "government[end_date(3i)]",
             label: "Day",
             width: 2,
