Spike adding contextual banner for organisations
Preview:

![new contextual banner field](https://github.com/alphagov/whitehall/assets/5111927/de1a3d7e-3ae4-4d43-bbe5-eaa474cdafd9)

Trello: https://trello.com/c/c1ULEEef/276-support-contextual-banner-field-for-organisations

--- a/app/views/admin/organisations/_form.html.erb
+++ b/app/views/admin/organisations/_form.html.erb
@@ -178,6 +178,19 @@
     ],
   } %>
 
+  <%= render "govuk_publishing_components/components/textarea", {
+    label: {
+      text: "Custom contextual banner (optional)",
+      heading_size: "l",
+    },
+    hint: "Displays a banner on live organisations (e.g. during a reshuffle) or overrides the default banner displayed on closed organisations.",
+    name: "organisation[custom_contextual_banner]",
+    id: "organisation_custom_contextual_banner",
+    value: organisation.custom_contextual_banner,
+    rows: 4,
+    error_items: errors_for(organisation.errors, :custom_contextual_banner),
+  } %>
+
   <%= render "govuk_publishing_components/components/input", {
     label: {
       text: "Organisation’s URL",
