Fix breadcrumb for 'promotional features' on organisations
Example page containing broken link:
https://whitehall-admin.integration.publishing.service.gov.uk/government/admin/organisations/prime-ministers-office-10-downing-street/promotional_features/2

Broken link path:
https://whitehall-admin.integration.publishing.service.gov.uk/government/admin/organisations/prime-ministers-office-10-downing-street/promotional_features/admin%20Prime%20Minister's%20Office,%2010%20Downing%20Street%20PromotionalFeature

Now fixed.

--- a/app/views/admin/promotional_features/show.html.erb
+++ b/app/views/admin/promotional_features/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
-    href: [:admin, @organisation, PromotionalFeature],
+    href: admin_organisation_promotional_features_path(@organisation),
   } %>
 <% end %>
 <% content_for :page_title, "Promotional feature: #{@promotional_feature.title}" %>
