Allow Content Blocks to be created
This adds a simple form that uses all a schema’s fields and saves all
the user input. This is very basic for now, but allows us to prove the
concept.

There’s also no validation, but that can come later

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/new.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/new.html.erb
@@ -1,8 +1,9 @@
-<span class="govuk-caption-xl">Object Store</span>
-<h1 class="govuk-heading-xl">Select a block type</h1>
+<% content_for :context, "Object store" %>
 
-<ul class="govuk-list">
-<% @schemas.each do |schema| %>
-  <li><%= link_to_new_block_type(schema) %></li>
+<% if @schemas %>
+  <% content_for :title, "Select a block type" %>
+  <%= render partial: "schemas", locals: { schemas: @schemas} %>
+<% else %>
+  <% content_for :title, "Create #{@schema.name}" %>
+  <%= render partial: "form", locals: { content_block_edition: @content_block_edition, schema: @schema} %>
 <% end %>
-</ul>
