Use the block’s view component when showing block

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/show.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/show.html.erb
@@ -1,2 +1,8 @@
 <% content_for :context, "Object store" %>
 <% content_for :title, "Manage #{add_indefinite_article @content_block_edition.document.block_type.humanize}" %>
+
+<%= render(
+      ContentObjectStore::ContentBlockEdition::Show::SummaryListComponent.new(
+        content_block_edition: @content_block_edition,
+      ),
+    ) %>
