--- a/app/views/admin/new_document/index.html.erb
+++ b/app/views/admin/new_document/index.html.erb
@@ -2,7 +2,9 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= form_with url: admin_new_document_options_path do %>
+    <%= form_with url: admin_new_document_options_path, data: {
+      module: "ga4-form-setup ga4-form-tracker",
+    } do %>
       <%= render "govuk_publishing_components/components/radio", {
         heading: "New document",
         heading_level: 1,
