--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/index.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/index.html.erb
@@ -1,6 +1,19 @@
 <% content_for :context, "Object store" %>
 <% content_for :title, "All content blocks" %>
 
-<% @content_block_editions.each do |content_block_edition| %>
-  <%= render ContentObjectStore::ContentBlockEdition::Index::SummaryCardComponent.new(content_block_edition:) %>
-<% end %>
+<div class="govuk-grid-row govuk-!-margin-bottom-8">
+  <div class="govuk-grid-column-full">
+    <%= render "govuk_publishing_components/components/button", {
+      text: "Create new object",
+      href: content_object_store.new_content_object_store_content_block_edition_path,
+    } %>
+  </div>
+</div>
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+  <% @content_block_editions.each do |content_block_edition| %>
+    <%= render ContentObjectStore::ContentBlockEdition::Index::SummaryCardComponent.new(content_block_edition:) %>
+  <% end %>
+  </div>
+</div>
