--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/new.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/new.html.erb
@@ -1,9 +1,19 @@
 <% content_for :context, "Object store" %>
 
 <% if @schemas %>
+  <% content_for :back_link do %>
+    <%= render "govuk_publishing_components/components/back_link", {
+      href: content_object_store.content_object_store_content_block_editions_path,
+    } %>
+  <% end %>
   <% content_for :title, "Select a block type" %>
   <%= render partial: "schemas", locals: { schemas: @schemas} %>
 <% else %>
+  <% content_for :back_link do %>
+    <%= render "govuk_publishing_components/components/back_link", {
+      href: content_object_store.new_content_object_store_content_block_edition_path,
+    } %>
+  <% end %>
   <% content_for :title, "Create #{@schema.name}" %>
   <%= render partial: "form", locals: { content_block_edition: @content_block_edition, schema: @schema} %>
 <% end %>
