Remove `owning_organisation` method
Now worldwide organisations are no longer associated with
`CorporateInformationPage`, the complexity around `owning_organisation`
has been removed.

The method is now only an alias for `organisation`, so we can remove the
method completely and replace all uses with `organisation`.

--- a/app/views/admin/corporate_information_pages/_form.html.erb
+++ b/app/views/admin/corporate_information_pages/_form.html.erb
@@ -30,7 +30,7 @@
         },
       } %>
 
-      <% cancel_link_path = edition.new_record? ? polymorphic_path([:admin, edition.owning_organisation, CorporateInformationPage]) : admin_edition_path(edition) %>
+      <% cancel_link_path = edition.new_record? ? polymorphic_path([:admin, edition.organisation, CorporateInformationPage]) : admin_edition_path(edition) %>
       <%= link_to "Cancel", cancel_link_path, class: "govuk-link govuk-link--no-visited-state" %>
     </div>
 
