Tidy up delegation
When we were creating an edition, we were using `attr_accessor` values
to persist a Document’s title (using `document_title`) and block type.

This commit tidies up how we delegate to documents, using `attr_writer`
to write to instance variables when creating an edition, and then using
custom getters for the title and block type. If a document exists and
has the attribute, then we return the attribute from the document. If it
doesn’t, we attempt to return the value of the instance variable.

I’ve also changed the slightly clumsy wording of `document_title` to
just `title`, so we’re more consistent.

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
@@ -5,10 +5,10 @@
     label: {
       text: "Title",
     },
-    name: "content_object_store_content_block_edition[document_title]",
-    id: "content_object_store_content_block_edition_document_title",
-    value: content_block_edition.document_title,
-    error_items: errors_for(content_block_edition.errors, :document_title),
+    name: "content_object_store_content_block_edition[title]",
+    id: "content_object_store_content_block_edition_title",
+    value: content_block_edition.title,
+    error_items: errors_for(content_block_edition.errors, :title),
   } %>
 
   <% @schema.fields.each do |field| %>
