--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
@@ -1,3 +1,5 @@
+<% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: content_block_edition)) %>
+
 <%= form_for content_block_edition, url: content_object_store.content_object_store_content_block_editions_path do |f| %>
   <%= f.hidden_field :block_type, value: schema.block_type %>
 
@@ -6,7 +8,7 @@
       text: "Title",
     },
     name: "content_object_store_content_block_edition[title]",
-    id: "content_object_store_content_block_edition_title",
+    id: "content_object_store/content_block_edition_title",
     value: content_block_edition.title,
     error_items: errors_for(content_block_edition.errors, :title),
   } %>
@@ -18,7 +20,7 @@
       },
       name: "content_object_store_content_block_edition[details[#{field}]]",
       id: "content_object_store_content_block_edition_details_#{field}",
-      value: content_block_edition.details&.fetch(field),
+      value: content_block_edition.details&.fetch(field, nil),
     } %>
   <% end %>
 
