Ensure error messages are presented
This returns the error messages on the details fields, as well as
updating the ID of the fields, so the error banner links correctly.

I’ve also updated the Cucumber tests to be a bit more robust, as well
as handling both missing and invalid fields.

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
@@ -19,8 +19,9 @@
         text: field.humanize,
       },
       name: "content_object_store_content_block_edition[details[#{field}]]",
-      id: "content_object_store_content_block_edition_details_#{field}",
+      id: "content_object_store/content_block_edition_details_#{field}",
       value: content_block_edition.details&.fetch(field, nil),
+      error_items: errors_for(content_block_edition.errors, "details_#{field}".to_sym),
     } %>
   <% end %>
 
