Revert "strip 'editionable' from titles of newly editionable content"
This reverts commit 073daeffba514941de5e0b8e88903d784f23fa64.

--- a/app/views/admin/editions/new.html.erb
+++ b/app/views/admin/editions/new.html.erb
@@ -1,4 +1,4 @@
-<% content_for :page_title, "New #{@edition.format_name.titleize}" %>
+<% content_for :page_title, "New #{@edition.type.titleize}" %>
 <% content_for :title, "New #{@edition.format_name}" %>
 <% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: @edition, parent_class: "edition")) %>
 
