--- a/app/views/admin/news_articles/_form.html.erb
+++ b/app/views/admin/news_articles/_form.html.erb
@@ -19,7 +19,11 @@
       <%= render "topical_event_fields", form: form, edition: edition %>
 
       <div class="app-view-edit-edition__world-organisation-fields govuk-!-margin-bottom-4">
-        <%= render "editionable_worldwide_organisation_fields", form: form, edition: edition, required: true %>
+        <% if Flipflop.editionable_worldwide_organisations? %>
+          <%= render "editionable_worldwide_organisation_fields", form: form, edition: edition, required: true %>
+        <% else %>
+          <%= render "worldwide_organisation_fields", form: form, edition: edition %>
+        <% end %>
       </div>
 
       <%= render "world_location_fields", form: form, edition: edition %>
