Call to action when creating a content block is to publish
This creates a block but now also publishes that straight to live in the Publishing API.
We are making this language change on the update form so we go back and update the old form.

This helps our cucumber test helpers be reused between forms.

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
@@ -30,15 +30,15 @@ content_object_store.content_object_store_content_block_editions_path do |f| %>
 
   <div class="govuk-button-group govuk-!-margin-bottom-6">
     <%= render "govuk_publishing_components/components/button", {
-      text: "Save and continue",
-      name: "save_and_continue",
-      value: "Save and continue",
+      text: "Save and publish",
+      name: "save_and_publish",
+      value: "Save and publish",
       type: "submit",
       data_attributes: {
         module: "gem-track-click",
         "track-category": "form-button",
         "track-action": "#{f.object.class.name.demodulize.underscore.dasherize}-button",
-        "track-label": "Save and continue",
+        "track-label": "Save and publish",
       },
     } %>
     <%= link_to("Cancel", content_object_store.content_object_store_content_block_editions_path, class: "govuk-link") %>
