Add Content Object Store css to main app
More context in Slack discussion - TLDR, this seemed
the best way of bringing in our styles.

https://gds.slack.com/archives/C0776B04EJU/p1721666672141989?thread_ts=1721657094.194219&cid=C0776B04EJU

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,6 +49,8 @@ $govuk-page-width: 1140px;
 @import "./admin/views/whats-new";
 @import "./admin/views/worldwide-organisations-choose-main-office";
 
+@import "../../../lib/engines/content_object_store/app/assets/stylesheets/content_object_store/application";
+
 .app-js-only {
   display: none;
 }
