render Timeline when showing a Content Block Edition

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/show.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/show.html.erb
@@ -11,3 +11,13 @@
         content_block_edition: @content_block_edition,
       ),
     ) %>
+
+<div class="govuk-grid-row govuk-!-padding-top-8">
+  <div class="govuk-grid-column-full">
+    <%= render(
+          ContentObjectStore::ContentBlockEdition::Show::TimelineComponent.new(
+            content_block_versions: @content_block_versions,
+          ),
+        ) %>
+  </div>
+</div>
