Creating and updating Editions use the same form partial
* Form objects can involve wrapping the original object and performing validations etc.

Here we have two nested objects (Document and Edition) which have their validation taking place at the lower Service class level.

Given the way the create form takes attributes from a Schema and update takes fields from the pair of objects, we need a slim form object to allow these journeys to share the same form partial.

* Configuring `form_for` properly to make sure it submitted to the right path was fun since it was unhappy when I removed `url`. I managed to get it working with a new `@form.url` method at first but then discovered that with[1] `form_with [content_object_form, object]` we pass the engine as the first param and it can figure it out from there.

[1] https://api.rubyonrails.org/v7.1.0/classes/Rails/Engine.html#class-Rails::Engine-label-Using+Engine-27s+routes+outside+Engine

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
@@ -1,9 +1,8 @@
-<% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: content_block_edition)) %>
+<% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: @form.content_block_edition)) %>
 
-<%= form_for content_block_edition, url:
-content_object_store.content_object_store_content_block_editions_path do |f| %>
+<%= form_for [content_object_store, @form.content_block_edition] do |f| %>
   <%= hidden_field_tag "content_block_edition[content_block_document_attributes][block_type]",
-    schema.block_type,
+    @form.schema.block_type,
     id: "content_object_store/content_block_edition_content_block_document_block_type" %>
 
   <%= render "govuk_publishing_components/components/input", {
@@ -12,19 +11,19 @@ content_object_store.content_object_store_content_block_editions_path do |f| %>
     },
     name: "content_block_edition[content_block_document_attributes][title]",
     id: "content_object_store/content_block_edition_content_block_document_title",
-    value: content_block_edition.content_block_document&.title,
-    error_items: errors_for(content_block_edition.errors, "content_block_document.title".to_sym),
+    value: @form.content_block_edition.content_block_document&.title,
+    error_items: errors_for(@form.content_block_edition.errors, "content_block_document.title".to_sym),
   } %>
 
-  <% @schema.fields.each do |field| %>
+  <% @form.attributes.each do |field, _value| %>
     <%= render "govuk_publishing_components/components/input", {
       label: {
         text: field.humanize,
       },
       name: "content_block_edition[details[#{field}]]",
       id: "content_object_store/content_block_edition_details_#{field}",
-      value: content_block_edition.details&.fetch(field, nil),
-      error_items: errors_for(content_block_edition.errors, "details_#{field}".to_sym),
+      value: @form.content_block_edition.details&.fetch(field, nil),
+      error_items: errors_for(@form.content_block_edition.errors, "details_#{field}".to_sym),
     } %>
   <% end %>
 
@@ -35,6 +34,6 @@ content_object_store.content_object_store_content_block_editions_path do |f| %>
       value: "Save and publish",
       type: "submit",
     } %>
-    <%= link_to("Cancel", content_object_store.content_object_store_content_block_editions_path, class: "govuk-link") %>
+    <%= link_to("Cancel", @form.back_path, class: "govuk-link") %>
   </div>
 <% end %>
