--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/new.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/new.html.erb
@@ -15,5 +15,5 @@
     } %>
   <% end %>
   <% content_for :title, "Create #{@schema.name}" %>
-  <%= render partial: "form", locals: { content_block_edition: @content_block_edition, schema: @schema} %>
+  <%= render partial: "form", locals: { form: @form } %>
 <% end %>
