--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/edit.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/edit.html.erb
@@ -7,41 +7,4 @@
   } %>
 <% end %>
 
-<% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: @form.content_block_edition)) %>
-<%= form_with model: @form.content_block_edition, as: :content_block_edition, url: content_object_store.content_object_store_content_block_edition_path do |f| %>
-  <%= hidden_field_tag "content_block_edition[content_block_document_attributes][block_type]",
-    @form.schema.block_type,
-    id: "content_object_store/content_block_edition_content_block_document_block_type" %>
-
-  <%= render "govuk_publishing_components/components/input", {
-    label: {
-      text: "Title",
-    },
-    name: "content_block_edition[content_block_document_attributes][title]",
-    id: "content_object_store/content_block_edition_content_block_document_title",
-    value: @form.content_block_edition.content_block_document&.title,
-    error_items: errors_for(@form.content_block_edition.errors, "content_block_document.title".to_sym),
-  } %>
-
-  <% @form.attributes.each do |field, value| %>
-    <%= render "govuk_publishing_components/components/input", {
-      label: {
-        text: field.humanize,
-      },
-      name: "content_block_edition[details[#{field}]]",
-      id: "content_object_store/content_block_edition_details_#{field}",
-      value: value,
-      error_items: errors_for(@form.content_block_edition.errors, "details_#{field}".to_sym),
-    } %>
-  <% end %>
-
-  <div class="govuk-button-group govuk-!-margin-bottom-6">
-    <%= render "govuk_publishing_components/components/button", {
-      text: "Save and publish",
-      name: "save_and_publish",
-      value: "Save and publish",
-      type: "submit",
-    } %>
-    <%= link_to("Cancel", @form.back_path, class: "govuk-link") %>
-  </div>
-<% end %>
+<%= render partial: "form", locals: { form: @form } %>
