--- a/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block_editions/_form.html.erb
@@ -1,18 +1,18 @@
 <% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: @form.content_block_edition)) %>
 
 <%= form_for [content_object_store, @form.content_block_edition] do |f| %>
-  <%= hidden_field_tag "content_block_edition[content_block_document_attributes][block_type]",
+  <%= hidden_field_tag "content_block_edition[document_attributes][block_type]",
     @form.schema.block_type,
-    id: "content_object_store/content_block_edition_content_block_document_block_type" %>
+    id: "content_object_store/content_block_edition_document_block_type" %>
 
   <%= render "govuk_publishing_components/components/input", {
     label: {
       text: "Title",
     },
-    name: "content_block_edition[content_block_document_attributes][title]",
-    id: "content_object_store/content_block_edition_content_block_document_title",
-    value: @form.content_block_edition.content_block_document&.title,
-    error_items: errors_for(@form.content_block_edition.errors, "content_block_document.title".to_sym),
+    name: "content_block_edition[document_attributes][title]",
+    id: "content_object_store/content_block_edition_document_title",
+    value: @form.content_block_edition.document&.title,
+    error_items: errors_for(@form.content_block_edition.errors, "document.title".to_sym),
   } %>
 
   <% @form.attributes.each do |field, _value| %>
