--- a/app/views/admin/world_location_news/features.html.erb
+++ b/app/views/admin/world_location_news/features.html.erb
@@ -1,6 +1,6 @@
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
-    href: :admin_world_location_news_index,
+    href: admin_world_location_news_index_path,
   } %>
 <% end %>
 <% content_for :page_title, @world_location_news.name %>
