use the Document timeline component
putting the timeline component on the `show` view
for a Document.

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/documents/show.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/documents/show.html.erb
@@ -15,7 +15,7 @@
 <div class="govuk-grid-row govuk-!-padding-top-8">
   <div class="govuk-grid-column-full">
     <%= render(
-          ContentObjectStore::ContentBlock::Document::Show::TimelineComponent.new(
+          ContentObjectStore::ContentBlock::Document::Show::DocumentTimelineComponent.new(
             content_block_versions: @content_block_versions,
           ),
         ) %>
