--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/_form.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/_form.html.erb
@@ -27,6 +27,21 @@
     } %>
   <% end %>
 
+  <%= render "components/select_with_search", {
+    id: "lead_organisation",
+    name: "content_block_edition[organisation_id]",
+    label:  "Lead organisation",
+    include_blank: true,
+    options: taggable_organisations_container.map do |name, id|
+      {
+        text: name,
+        value: id,
+        selected: id == @form.content_block_edition.lead_organisation&.id,
+      }
+    end,
+    error_message: errors_for_input(@form.content_block_edition.errors, "lead_organisation".to_sym),
+  } %>
+
   <div class="govuk-button-group govuk-!-margin-bottom-6">
     <%= render "govuk_publishing_components/components/button", {
       text: "Save and publish",
