Add warning text when creating worldwide organisations
Since rolling out editionable worldwide organisations, we have seen a
few instances of users intending to publish world news stories but
actually publishing new worldwide organisations.

Adding some warning text to remind publishers that these are only to be
created after discussion with the relevant people.

--- a/app/views/admin/editions/new.html.erb
+++ b/app/views/admin/editions/new.html.erb
@@ -9,6 +9,14 @@
       items: secondary_navigation_tabs_items(@edition, request.path),
     } %>
 
+    <% if @edition.new_content_warning %>
+      <div class="format-advice">
+        <%= render "govuk_publishing_components/components/warning_text", {
+          text: @edition.new_content_warning,
+        } %>
+      </div>
+    <% end %>
+
     <%= render "form", edition: @edition %>
   </div>
 
