Optionally hide the title
As this first section will already have a title as part of the radio
component, we need a way to tell the layout to not render the page
title.

--- a/app/views/layouts/design_system.html.erb
+++ b/app/views/layouts/design_system.html.erb
@@ -50,7 +50,7 @@
         </div>
       <% end %>
 
-      <% if yield(:title).present? %>
+      <% if yield(:title).present? && yield(:hide_title).blank? %>
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-<%= column_width %>">
             <%= render "govuk_publishing_components/components/title", {
