--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/new.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/new.html.erb
@@ -6,6 +6,7 @@
       href: content_object_store.content_object_store_content_block_documents_path,
     } %>
   <% end %>
+  <% content_for :hide_title, true %>
   <% content_for :title, "Select a block type" %>
   <%= render partial: "schemas", locals: { schemas: @schemas} %>
 <% else %>
