Change “Save and publish” to “Save and continue”
We no longer publish on this step

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/_form.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/_form.html.erb
@@ -44,9 +44,9 @@
 
   <div class="govuk-button-group govuk-!-margin-bottom-6">
     <%= render "govuk_publishing_components/components/button", {
-      text: "Save and publish",
-      name: "save_and_publish",
-      value: "Save and publish",
+      text: "Save and continue",
+      name: "save_and_continue",
+      value: "Save and continue",
       type: "submit",
     } %>
     <%= link_to("Cancel", @form.back_path, class: "govuk-link") %>
