refactor Edition Form to have set url
this enables us to post to a different endpoint
depending on whether it's Create or Edit.

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/_form.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/_form.html.erb
@@ -1,6 +1,9 @@
 <% content_for :error_summary, render(Admin::ErrorSummaryComponent.new(object: @form.content_block_edition)) %>
 
-<%= form_for [content_object_store, @form.content_block_edition] do |f| %>
+<%= form_with(
+      url: @form.url,
+      method: :post,
+      model: [content_object_store, @form.content_block_edition]) do |f| %>
   <%= hidden_field_tag "content_block_edition[document_attributes][block_type]",
     @form.schema.block_type,
     id: "content_object_store/content_block_edition_document_block_type" %>
