Fix the showing of embedded content by changing how we fetch it
This old implementation worked locally but doesn’t work on Integration. Likely due to the size of the database. See full details in the Publishing API change here[1].

We temporarily lose pagination which we got for free with the old endpoint. We’ll have to work on adding that back in shortly.

We also make a direct call to the Publishing API using Net::HTTP. We
will look to implementing a new method in GDS Adapters once we're happy
this works.

[1] https://github.com/alphagov/publishing-api/pull/2846

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/documents/show.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/documents/show.html.erb
@@ -15,11 +15,9 @@
 <div class="govuk-grid-row govuk-!-padding-top-8">
   <div class="govuk-grid-column-full">
     <%= render(
-      ContentObjectStore::ContentBlock::Document::Show::LinkedEditionsTableComponent.new(
+      ContentObjectStore::ContentBlock::Document::Show::HostEditionsTableComponent.new(
         caption: "Content appears in",
-        linked_content_items: @linked_content_items,
-        page_data: @page_data,
-        page_path: request.url,
+        host_content_items: @host_content_items,
       ),
     ) %>
   </div>
