--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/review_links.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/review_links.html.erb
@@ -12,11 +12,9 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <%= render(
-          ContentObjectStore::ContentBlock::Document::Show::LinkedEditionsTableComponent.new(
+          ContentObjectStore::ContentBlock::Document::Show::HostEditionsTableComponent.new(
             caption: "Content it appears in",
-            linked_content_items: @linked_content_items,
-            page_data: @page_data,
-            page_path: content_object_store.edit_content_object_store_content_block_edition_path(content_block_edition: @edition_params, step: ContentObjectStore::ContentBlock::EditionsController::EDIT_FORM_STEPS[:review_links]),
+            host_content_items: @host_content_items,
             ),
           ) %>
   </div>
