--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/review_links.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/review_links.html.erb
@@ -26,7 +26,7 @@
       <div class="govuk-grid-column-full">
         <%= form_with(
               url: content_object_store.edit_content_object_store_content_block_edition_path(
-                content_block_edition: @edition_params,
+                "content_block/edition": @edition_params,
                 step: ContentObjectStore::ContentBlock::EditionsController::EDIT_FORM_STEPS[:schedule_publishing],
               ),
               method: :post,
