Show a warning when a schedule is pending
This ensures there is no confusion when a user attempts to edit a
currently scheduled content block. This will need some design attention,
but is Good Enough for now

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/edit.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/edit.html.erb
@@ -7,4 +7,10 @@
   } %>
 <% end %>
 
+<% if @content_block_edition.scheduled? %>
+  <%= render "govuk_publishing_components/components/warning_text", {
+    text: "There is currently a change scheduled for this content block. If you continue, the scheduled update will be cancelled.",
+  } %>
+<% end %>
+
 <%= render partial: "form", locals: { form: @form } %>
