--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/documents/_schemas.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/documents/_schemas.html.erb
@@ -1,16 +1,16 @@
-<% if @error_message %>
+<% if flash[:error] %>
   <%= render ContentObjectStore::ContentBlockEdition::New::ErrorSummaryComponent.new(
-    error_message: @error_message,
+    error_message: flash[:error],
   ) %>
 <% end %>
 
-<%= form_with url: content_object_store.new_content_object_store_content_block_edition_path, method: :get do %>
+<%= form_with url: content_object_store.new_document_options_redirect_content_object_store_content_block_documents_path, method: :post do %>
   <%= hidden_field_tag :block_type, "" %>
 
   <%= render ContentObjectStore::ContentBlockEdition::New::SelectSchemaComponent.new(
     heading: content_for(:page_title),
     heading_caption: content_for(:context),
-    error_message: @error_message,
+    error_message: flash[:error],
     schemas: @schemas,
   ) %>
 
