Update Summary Card component on "Social media accounts" page

--- a/app/components/admin/social_media_accounts/index/summary_card_component.html.erb
+++ b/app/components/admin/social_media_accounts/index/summary_card_component.html.erb
@@ -1,4 +1,4 @@
-<%= render "components/summary_card", {
+<%= render "govuk_publishing_components/components/summary_card", {
   title: social_media_account.service_name,
   rows: rows,
   summary_card_actions: summary_card_actions,
