Move the form to a shared folder
We’ll soon be acting on editions and documents with this

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/edit.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/edit.html.erb
@@ -13,4 +13,4 @@
   } %>
 <% end %>
 
-<%= render partial: "form", locals: { form: @form } %>
+<%= render partial: "content_object_store/content_block/shared/form", locals: { form: @form } %>
