--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/workflow/schedule_publishing.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/workflow/schedule_publishing.html.erb
@@ -3,9 +3,9 @@
 <% content_for :title_margin_bottom, 4 %>
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
-    href: content_object_store.content_object_store_content_block_step_path(
+    href: content_object_store.content_object_store_content_block_workflow_path(
       edition_id: @content_block_edition.id,
-      step: ContentObjectStore::ContentBlock::Editions::StepsController::VALID_STEPS[:review_links],
+      step: ContentObjectStore::ContentBlock::Editions::WorkflowController::UPDATE_BLOCK_STEPS[:review_links],
     ),
   } %>
 <% end %>
@@ -25,9 +25,9 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= form_with url: content_object_store.content_object_store_content_block_step_path(
+    <%= form_with url: content_object_store.content_object_store_content_block_workflow_path(
       edition_id: @content_block_edition.id,
-      step: ContentObjectStore::ContentBlock::Editions::StepsController::VALID_STEPS[:schedule_publishing],
+      step: ContentObjectStore::ContentBlock::Editions::WorkflowController::UPDATE_BLOCK_STEPS[:schedule_publishing],
       ),
       method: :put do %>
 
