Replace the body textarea with a Monaco editor
This should provide a much better editing experience for YAML files. It
gives us syntax highlighting, code folding, line numbers, and a whole
bunch of other features.

It does not yet provide schema validation, or schema-powered
autocomplete, but that's a possible improvement for later.

We're using ecmascript modules to load the third party javascript here,
rather than installing it with npm. This is just because bundling the
code and making the rails asset pipeline aware of it is a yak shave.
Hopefully the YAML editor won't be a long term component, so this will
be a temporary oddity.

--- a/app/views/admin/landing_pages/_form.html.erb
+++ b/app/views/admin/landing_pages/_form.html.erb
@@ -2,15 +2,20 @@
   <p class="govuk-body"><strong>Use this format for:</strong> Special landing pages</p>
 </div>
 
-<%= standard_edition_form(edition) do |form| %>
-  <%= render "govuk_publishing_components/components/fieldset", {
-    legend_text: "Associations",
-    heading_level: 2,
-    heading_size: "l",
-    id: "associations",
-  } do %>
-    <div class="govuk-!-margin-bottom-4">
-      <%= render "organisation_fields", form: form, edition: edition %>
-    </div>
+<div data-module="YamlEditor">
+  <%= standard_edition_form(edition) do |form| %>
+    <%= render "govuk_publishing_components/components/fieldset", {
+      legend_text: "Associations",
+      heading_level: 2,
+      heading_size: "l",
+      id: "associations",
+    } do %>
+      <div class="govuk-!-margin-bottom-4">
+        <%= render "organisation_fields", form: form, edition: edition %>
+      </div>
+    <% end %>
   <% end %>
-<% end %>
+</div>
+
+<%= stylesheet_link_tag "https://esm.sh/monaco-editor?css" %>
+<%= javascript_include_tag "components/yaml-editor.js", type: "module" %>
