Return Updated info on Host Editions
This attempts to find a user for the `last_edited_by_editor_id` for a
piece of content, if it exists.

Currently, we’re querying the database for this information, which will
only work if a user has Whitehall access. This isn’t ideal, and we’ve
added a card to the backlog to look into how else we can access this
information (possibly via Signon). However, this is a bigger piece of
work that we’ll look at tackling further down the line.

--- a/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/show/host_editions_table_component.html.erb
+++ b/lib/engines/content_block_manager/app/components/content_block_manager/content_block/document/show/host_editions_table_component.html.erb
@@ -15,6 +15,9 @@ it out for now-->
     {
       text: "Publishing organisation",
     },
+    {
+      text: "Updated",
+    },
   ],
   rows:,
 } %>
