search by keyword in details and title of Content Block
This now matches keywords agains the user
generated free text on a block. Select options
will be added for Organisation, date etc.

If any other free text options were added (such as
internal instructions, description) we'd need to
add them to this keyword match here too.

--- a/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/_filter_options.html.erb
+++ b/lib/engines/content_block_manager/app/views/content_block_manager/content_block/documents/_filter_options.html.erb
@@ -1,13 +1,13 @@
 <%= form_with url: content_block_manager.content_block_manager_content_block_documents_path, method: :get do %>
     <%= render "govuk_publishing_components/components/input", {
       label: {
-        text: "Title",
+        text: "Keyword",
         bold: true,
       },
       hint: 'For example, "driving standards"',
-      name: "title",
-      id: "title_filter",
-      value: !@filters.nil? && @filters[:title],
+      name: "keyword",
+      id: "keyword_filter",
+      value: !@filters.nil? && @filters[:keyword],
     } %>
 
   <%= render "govuk_publishing_components/components/button", {
